# MER-Bench

./: .gitignore  README.md  batch.py  index_filtered.json  judge.py  main.py  pyproject.toml  rfs.py  stat.json
data/: index_final.json
evaluate/: metrics.py
results/: figure_5_a-n.py  figure_5_o.py  table_2.py  table_3.py
tests/: test_judge.py
