[project]
name = "MER-Bench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.62.0",
    "huggingface-hub[cli]>=1.4.0",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pingouin>=0.5.5",
]

[dependency-groups]
dev = [
    "pip-system-certs>=5.3",
    "pytest>=9.0.2",
]
